# circassian

./: .gitignore  Kabardian Grammar in two volumes (translation).aux  Kabardian Grammar in two volumes (translation).out  Kabardian Grammar in two volumes (translation).tex  Kabardian Grammar in two volumes (translation).toc  Kabardian.aux  Kabardian.fdb_latexmk  Kabardian.fls  Kabardian.tex  README.md  sca2.txt
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  graph.json  workspace  workspace.json
Kabardian Dictionary/: -ʁʷə.md  aːda.md  aːdanapʼas.md  aːna pɕəpχʷ.md  aːna.md  aːnaqəjɬxʷ.md  aːnaʃ.md  aːnaʃxʷa.md  bzəw.md  bɮatʃʼən.md  bʑəħa.md  daɬxʷ.md  dəħan.md  dəʁʷaːsa.md  dʒadəw.md  dʒan.md  gʷaɕ.md  gʷə.md  gʷəpsəsan.md  gʷəʁa.md  jadʒaʒən.md  jagʷəpsəsaːwa.md  jaɕan.md  jaɬan.md  jədʒə.md  maːɬχa.md  məva.md  naːpa.md  pa.md  padzəʒən.md  paːsa.md  psəsa.md  pɕadaj.md  pɕən.md  pɕəpχʷ.md  pədzan.md  pɬəʑ.md  pɬʼə.md  pʃəna.md  pχaɕħaməɕħa.md  (+54 more)
Kabardian Dictionary/.obsidian/: app.json  appearance.json  core-plugins.json  graph.json  (+1 more)
Lesson/: CAT.SCR.MINIMAL_PAIRS.md  CAT.SCR.VERB_DERIVATION.md  CAT.Verbs.md  Comparing northwestern Caucasian.md  Dialectal Variation.md  Geography.md  Own Phrases.md  Own attempts for expressions.md  Phrases.md  README.md  random phrases.md
grammar-book/: grammar.tex
guide/: 0. introduction.md
resources/: README.md.md
subproj/: Kabardian.tex  __latexindent_temp.tex  sca2.txt
subproj/scrape_amaltus/: Cargo.toml
subproj/scrape_amaltus/src/: main.rs
telestudio/: README.md  run.sh
(+408 files in other folders)
