[package]
name = "scrape_amaltus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["json", "blocking"] }
thirtyfour = { version = "0.30.0"}
tokio = { version = "1.20", features = ["full"] }